tests/NormalTests/paczka1/small_fuzzy/96380022.err
Error in line 4: eCOJ3eh S422 87,7
Error in line 6: eCOJ3eh A955 99,5
Error in line 9: eJdBVMDT A552 7,65
Error in line 11: eCOJ3eh A552 3C,7
Error in line 7: eCOJ3eh S358 17,0
